--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="jquery-collision.min.js"></script>
     <script src="jquery-ui-draggable-collision.min.js"></script>
 	<script src="jquery.minicolors.min.js"></script>
+	<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
 	<script type="text/javascript" src="FrankenyFinalProject.js"></script>
 	
 
