--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <audio autoplay id="musicPlayer" src="music/Suaveness!.mp3" type="audio/mpeg">
 </audio>
 <div id="menuScreen">
-	<h1>Minefall</h1>
+	<img src="MinefallPic.png">
 	<button type="button" id="btnStartGame">Start Game</button>
 	<button type="button" id="btnInstructions">Instructions</button>
 	<button type="button" id="btnOptions">Options</button>
