CSS changes, Bug fix

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 	<button type="button" id="btnBack">Back</button>
 	<h1>Instructions</h1>
 	<p>Red squares (mines) will fall from the top of the screen. Avoid the mines to stay alive by dragging your player character (blue square) around with your finger! The number of mines you have dodged is displayed at the top of the screen during the game. The mines will speed up after every 100 mines dodged. See how long you can survive!</p>
-	<a href="https://build.phonegap.com/apps/1162983/builds">PhoneGap Build Link</a>
-	<a href="https://github.com/Glipocalypse/Project-4">GitHub Repository Link</a>
+	<button onclick="location.href='https://build.phonegap.com/apps/1227631/builds'">
+     PhoneGap Link</button>
+	<button onclick="location.href='https://github.com/Glipocalypse/FinalProject'">
+     GitHub Link</button>
 </div>
 <div id="gameScreen">
 <h1 id="mineCount">0</h1>
